--- a/fundamentals/01_html/lesson_01_HTML_Introduction.html
+++ b/fundamentals/01_html/lesson_01_HTML_Introduction.html
@@ -1,23 +1,9 @@
-<!--
-  <!DOCTYPE html> declaration defines that the document is an HTML5 document. 
-  It must always be the very first line of your code.
---> 
 <!DOCTYPE html> 
 
-<!--
-  <html>...</html>
-  This is the root element of the page. All other elements are nested inside it.
--->
-<html>
-
-<!--
-  <head>...</head>
-  This section contains meta-information that isn't displayed directly on the page, 
-  like the page title or links to CSS stylesheets.
--->
+<html class="no-js" lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Introduction</title>
   <link rel="stylesheet" href="../../assets/css/style.css">
   <meta name="description" content="">
@@ -34,93 +20,16 @@
 
   <link rel="manifest" href="../../site.webmanifest">
   <meta name="theme-color" content="#fafafa">
-
-  <!--
-  <title>...</title>
-  The <title> tag sets the title of the webpage. 
-  This is what you see in  browser tab and what search engines use as the main title in search results.
-  -->
 </head>
-
-<!--
-  <body>...</body>
-  The <body> tag contains all the visible content of your webpage—headings, paragraphs, images, links, etc.
--->
 <body>
-<br>
   <h1>HTML Introduction</h1>
   <!--
-    Essential HTML Elements (Tags)
-    Elements are the building blocks of HTML. Here are the most common ones you'll use every day.
 
-      Headings: <h1> to <h6>
-      HTML provides six levels of headings. 
-      <h1> is the most important (the main title of your content), while <h6> is the least.
+  --><br>
 
-      Paragraphs: <p>
-      The <p> tag defines a paragraph of te Browsers automatically add space before and after each paragraph.
-
-      Links: <a>
-      The <a> (or anchor) tag creates a hyperlink. The href attribute specifies the URL to which the link points.
-
-      Comments
-      You can add comments to your code to leave notes for yourself or others.  browser ignores comments
-
-    Semantic HTML
-    As you advance, use semantic elements like <header>, <footer>, <nav>, and <article> to add meaning to your content 
-    when designing or developing a web page. This improves both accessibility and SEO.
-  -->
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <h4>Heading 4</h4>
-  <h5>Heading 5</h5>
-  <h6>Heading 6</h6><br>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
-  <a href="https://github.com/wasulabenjamin/web_basics">Web Basic Tutorial</a><br>
-  
-  <h1>HTML Introduction</h1>
+  <h1>Home</h1>
   <!--
-    HTML stands for HyperText Markup Language. 
-    It is used to structure the content on the web by using various elements (commonly known as tags). 
-    These HTML elements define the different sections of a web page, such as headings, paragraphs, links to other 
-    webpages, listings, images, tables, etc.
-    These elements tell  browser about the content and formatting to display.
 
-    HTML is HyperText + Markup Language. Where:
-    - HyperText refers to the way in which Web pages (HTML documents) are linked together. Thus, the link available on 
-      a webpage is called "HyperText".
-    - Markup Language, which means you use HTML to simply "mark up" a text document with tags that tell a  browser 
-      how to structure it to display.
-
-    A HTML element is a basic building block to create a webpage.
-    It is created by a start tag, content, and end tag. 
-    In a HTML element, the content is placed between a start and end tag.
-
-    HTML Tags Vs. Elements Vs. Attributes
-    - HTML tags are the keywords that can be used for a specific purpose to display and format the content on a webpage.
-      HTML tags are not case-sensitive. They can be written in uppercase or in lowercase. 
-      But the World Wide Web Consortium (W3C) recommends using lowercase tags starting from HTML 4.
-    - HTML elements are the basic building blocks that are made with the help of tags and content. 
-      A HTML element is created with a start tag, a content, and an end tag.
-    - HTML attributes provide additional information about HTML elements; in order to define or change their behavior. 
-      Attributes are used with an opening tag.
-
-    HTML is the fundamental building blocks of the World Wide Web. Any page that you visit on the web contains HTML 
-    tags. HTML is important for the various reasons:
-    - HTML defines webpage structure and helps to design websites.
-    - With the help of CSS and JavaScript, HTML helps to create beautiful and interactive websites.
-    - HTML helps in search engine optimization by optimizing the tags based on the targeted keywords.
-    - HTML helps to navigate  browse) different pages and websites from anywhere on the internet.
-    - HTML supports user input and forms; you can easily get information from anywhere in the world.
-      You may need background database support for it.
-    - HTML follows an open standard by W3C. Thus, HTML supports  browsers on any type of device.
-      You do not need to change the HTML for the differ browsers or devices.
   --><br>
 
   <h1>Roadmap</h1>
@@ -252,6 +161,5 @@
   <!--
 
   --><br>
-  <script src="assets/js/app.js"></script>
 </body>
 </html>
