--- a/fundamentals/01_html/lesson_18_HTML5_Useful_References.html
+++ b/fundamentals/01_html/lesson_18_HTML5_Useful_References.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 
 <html class="no-js" lang="en">
 <head>
@@ -25,36 +25,43 @@
   <h1>HTML5 Useful References</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
   <h1>Quick Guide</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
-  <h1>Question and Answers</h1>
+  <h1>Questions and Answers</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
   <h1>Deprecated Tags</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
   <h1>New Tags</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
   <h1>Useful Resources</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 
   <h1>Discussion</h1>
   <!--
 
-  --><br>
+  -->
+  <br>
 </body>
 </html>
