--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 <body>
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+
+  <nav>
+    <a href="#html">HTML</a> | 
+    <a href="#css">CSS</a> | 
+    <a href="#js">JS</a>
+  </nav>
+  
+  <h1>Web Fundamentals Journey</h1>
+  <section id="progress-tracker">
+    <!-- Dynamic progress bars -->
+  </section>
+
   <script src="assets/js/app.js"></script>
 </body>
 </html>
