--- a/index.html
+++ b/index.html
@@ -1,41 +1,83 @@
 <!DOCTYPE html>
+
 <html class="no-js" lang="en">
 <head>
-
+  <!-- CHARACTER ENCODING & VIEWPORT FIRST -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Web Basics</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <!-- PRIMARY METADATA -->
+  <title>Web Basics - Full Stack Learning Path</title>
+  <meta name="description" content="A curated step-by-step learning path covering everything from basic web development
+    to modern fullstack apps using tools like Vue.js, Supabase, and PostgreSQL.">
+  <meta name="author" content="Wasula Benjamin">
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <!-- SEO AND INDEXING -->
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="web development, html, html5, css, javascript, json, bootstrap, tailwindcss, vuejs,
+    postgresql, supabase, fullstack">
+
+  <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/wasulabenjamin/web_basics">
+  <meta property="og:title" content="Web Development Learning Path">
+  <meta property="og:description" content="Master fullstack development with curated projects in html, html5, css,
+    javascript, json, bootstrap, tailwindcss, vuejs, postgresql, and supabase">
+  <meta property="og:image" 
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="628">
+  <meta property="og:image:alt" content="Web Development Learning Path">
+  <meta property="og:site_name" content="Wasula Benjamin">
+
+  <!-- TWITTER CARD TAGS (SHOULD COME BEFORE ICONS) -->
+  <meta name="twitter:card" content="summary_large_imageu">
+  <meta name="twitter:title" content="Web Development Learning Path">
+  <meta name="twitter:description" content="Master fullstack development with curated projects in html, html5, css, 
+    javascript, json, bootstrap, tailwindcss, vuejs, postgresql, and supabase">
+  <meta name="twitter:image" 
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
+  <meta name="twitter:image:alt" content="Web Development Learning Path Infographic">
+  <meta name="twitter:site" content="@wasulabenjamin">
+  <meta name="twitter:creator" content="@wasulabenjamin">
+  <meta name="twitter:domain" content="github.com/wasulabenjamin/web_basics">
+
+  <!-- PWA SUPPORT AND BROWSER UI ENHANCEMENTS -->
+  <meta name="theme-color" content="#fafafa">
+  <link rel="manifest" href="site.webmanifest">
+
+  <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="icon.png">
 
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <!-- STYLESHEETS: LOCAL FIRST  -->
+  <link rel="stylesheet" href="assets/css/style.css" media="print" onload="this.media='all'">
+
+  <!-- VENDOR STYLE-SHEETS CDN  -->
+  <link rel="stylesheet" crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr">
 </head>
 <body>
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
 
   <nav>
-    <a href="#html">HTML</a> | 
-    <a href="#css">CSS</a> | 
+    <a href="#html">HTML</a> |
+    <a href="#css">CSS</a> |
     <a href="#js">JS</a>
   </nav>
-  
+
   <h1>Web Fundamentals Journey</h1>
   <section id="progress-tracker">
     <!-- Dynamic progress bars -->
   </section>
 
   <script src="assets/js/app.js"></script>
+  <script crossorigin="anonymous"
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" ></script>
 </body>
 </html>
