--- a/fundamentals/01_html/lesson_01_HTML_Introduction.html
+++ b/fundamentals/01_html/lesson_01_HTML_Introduction.html
@@ -208,7 +208,8 @@
 
       Boolean Attributes
       Boolean attributes represent true and false values and do not require any value with the attribute name.
-      To set the true value, you need to write the attribute's name, and to set it false, the attribute should be omitted altogether.
+      To set the true value, you need to write the attribute's name, and to set it false, the attribute should be 
+      omitted altogether.
       Boolean attributes include: disabled, readonly, required, inert, autocomplete
 
       The xml:lang Attribute
@@ -325,7 +326,9 @@
 
     Reason to Use Paragraphs:
     Paragraphs typically create space above and below the text, separating it from surrounding content.
-    They can be styled using CSS to control aspects such as font size, color, alignment, and spacing. In web development, paragraphs play a crucial role in conveying information effectively, enabling clear communication, and enhancing the overall user experience on a website.
+    They can be styled using CSS to control aspects such as font size, color, alignment, and spacing. 
+    In web development, paragraphs play a crucial role in conveying information effectively, enabling clear 
+    communication, and enhancing the overall user experience on a website.
 
     Line Breaks With Paragraphs
     The <br> tags are used to insert line breaks within a paragraph to control the text layout.
@@ -474,9 +477,10 @@
     Without formatting, nothing looks good or soothing to our eyes.
     But HTML formatting is not only for soothing the eye or making textual content attractive.
     There are few reasons to do the HTML formatting, this include:
-      - The appearance of any text provides a clear view of the content intent, such as highlighting the keywords, putting
-        meaningful information in the quotations, underlining the main sentence, etc.
-      - Formatting helps search engines understand the content structure and is also helpful for search engine optimization.
+      - The appearance of any text provides a clear view of the content intent, such as highlighting the keywords, 
+        putting meaningful information in the quotations, underlining the main sentence, etc.
+      - Formatting helps search engines understand the content structure and is also helpful 
+        for search engine optimization.
       - Formatting improves the visual layout and improves the readability of the content.
 
     The following table has a list of common HTML formatting tags that are used for text formatting:
@@ -522,7 +526,9 @@
   <!--
     HTML Quotations
     HTML quotations allow you to include and format quoted text within your web content.
-    These quotation tags help maintain proper formatting and semantics, enhancing the presentation and meaning of quoted content on web pages. Incorporating quotes is essential for conveying information accurately and providing a well-organized reading experience for users.
+    These quotation tags help maintain proper formatting and semantics, enhancing the presentation and meaning of quoted 
+    content on web pages. Incorporating quotes is essential for conveying information accurately and providing a 
+    well-organized reading experience for users.
 
     The following are the quotation elements that are used to insert and display quotations on the webpage:
       - <q>........... Defines a short inline quotation.
