--- a/fundamentals/01_html/lesson_03_HTML_Lists.html
+++ b/fundamentals/01_html/lesson_03_HTML_Lists.html
@@ -1,80 +1,446 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 
 <html class="no-js" lang="en">
 <head>
+  <!-- CHARACTER ENCODING & VIEWPORT FIRST -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- PRIMARY METADATA -->
   <title>HTML Lists</title>
-  <link rel="stylesheet" href="../../assets/css/style.css">
-  <meta name="description" content="">
+  <meta name="description" content="An Introduction to HTML for Complete Beginners">
+  <meta name="author" content="Wasula Benjamin">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <!-- SEO AND INDEXING -->
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="web development basics, html, lists">
 
-  <link rel="icon" href="../../favicon.ico" sizes="any">
+  <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/wasulabenjamin/web_basics">
+  <meta property="og:title" content="HTML Lists">
+  <meta property="og:description" content="An Introduction to HTML for Complete Beginners">
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="628">
+  <meta property="og:image:alt" content="HTML Lists">
+  <meta property="og:site_name" content="Wasula Benjamin">
+
+  <!-- TWITTER CARD TAGS -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HTML Lists">
+  <meta name="twitter:description" content="Master HTML development with curated projects in html and html5">
+  <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
+  <meta name="twitter:image:alt" content="HTML Lists Infographic">
+  <meta name="twitter:site" content="@wasulabenjamin">
+  <meta name="twitter:creator" content="@wasulabenjamin">
+  <meta name="twitter:domain" content="github.com/wasulabenjamin/web_basics">
+
+  <!-- PWA SUPPORT AND BROWSER UI ENHANCEMENTS -->
+  <meta name="theme-color" content="#fafafa">
+  <link rel="manifest" href="../../site.webmanifest">
+
+  <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="../../icon.svg" type="image/svg+xml">
+  <link rel="icon" href="../../icon.png" type="image/png">
+  <link rel="icon" href="../../favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="../../icon.png">
 
-  <link rel="manifest" href="../../site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <!-- STYLESHEETS: LOCAL FIRST  -->
+  <link rel="stylesheet" href="../../assets/css/learn_html.css">
 </head>
 <body>
   <h1>HTML Lists</h1>
   <!--
+    HTML Lists
+    HTML lists are group or collection of items. These items can be both organized and unorganized depending on the 
+    requirement. They help in organizing, structuring, and presenting information to make it more user-friendly, 
+    readable, and accessible. 
 
+    To display a list of information in HTML, we use various list tags like <ul>, <ol>, and <ll>. 
+    HTML offers web developers three ways for specifying lists: ordered, unordered, and definition lists. 
+    All lists must contain one or more list elements. In addition to the mentioned types of lists, there are some other 
+    important list-related elements and concepts that also contribute to effective document structuring.
+
+    Unordered lists
+    Unordered lists display lists of items that are not in a specific order. 
+    The unordered lists are marked with bullet points. 
+    To create an unordered list, the <ul> tag is used along with the <li> tag. 
+    Here, the <li> tag specifies the list items.
+
+    Ordered Lists
+    Ordered lists are lists of items that are in a specific order. 
+    The ordered lists are marked with numbers by default; you can change the numbers into alphabets, 
+    roman numbers, etc. by using the type attribute or the CSS list-style-type property.
+    To create an ordered list, the <ol> tag is used along with the <li> tag, where <li> specifies the list items.
+
+    Definition Lists
+    Definition lists are lists of items with their corresponding descriptions. 
+    The definition lists are created by using the <dl>, <dt>, and <dd> tags. 
+      <dl> tag specifies the "definition list"
+      <dt> tag specifies the "definition term"
+      <dd> tag specifies the "definition description".
+
+    Nested Lists
+    A list created within another list is known as a nested list. 
+    HTML also allows nesting of lists within one another to generate complex document structures.
+
+    Grouping Lists Inside <div> Tag
+    To enhance styling and layout, lists are often wrapped inside the <div> elements. 
+    This grouping aids in applying consistent styles and creating visually appealing list structures.
+
+    Styling Lists
+    Lists can be styled using CSS to enhance visual presentation. 
+    Custom styles can be applied to list items, creating unique and visually appealing designs. 
+    For this, we use the <style></style> tag, which is a way of specifying internal CSS.
+
+    HTML Lists Marker Types
+    CSS allows customization of marker types for list items. 
+    To do so, we use the CSS list-style-type property, which can be set to change markers to 
+    circles, squares, or other symbols.
   -->
+  <h2>Unordered lists</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br><hr>
 
-  <h1>Lists</h1>
-  <!--
+  <h2>Ordered Lists</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
+  <br>
 
-  -->
+  <h2>Definition Lists</h2>
+  <dl>
+    <dt>HTML</dt>
+    <dd>HyperTex Markup Language</dd>
+    <dt>CSS</dt>
+    <dd>Cascading Style Sheet</dd>
+    <dt>JS</dt>
+    <dd>JavaScript</dd>
+  </dl>
   <br>
+
+  <h1>Nested Lists</h1>
+  <dl>
+    <dt>Web Fundamentals</dt>
+    <dd>
+      <ol>
+        <li>HTML + HTML5</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Bootstrap</li>
+        <li>Tailwind CSS</li>
+        <li>JSON & Web APIs</li>
+      </ol>
+    </dd>
+    <dt>Frontend Framework</dt>
+    <dd>
+      <ol>
+        <li>VueJS</li>
+        <li>ReactJS</li>
+        <li>NextJS</li>
+      </ol>
+    </dd>
+    <dt>Backend & Database</dt>
+    <dd>
+      <ol>
+        <li>PostgreSQL</li>
+        <li>Supabase</li>
+      </ol>
+    </dd>
+  </dl>
   <br>
-  <br>
-  <br>
-  <br>
+
+  <h2>Grouping Lists Inside div Tag, Styling Lists, and HTML Lists Marker Types</h2>
+  <div class="unordered_lists">
+    <p>Unordered lists</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JS</li>
+    </ul>
+    <br>  
+  </div>
+  <div class="definition_lists">
+    <p>Definition Lists</p>
+    <dl>
+      <dt>HTML</dt>
+      <dd>HyperTex Markup Language</dd>
+      <dt>CSS</dt>
+      <dd>Cascading Style Sheet</dd>
+      <dt>JS</dt>
+      <dd>JavaScript</dd>
+    </dl>
+  </div>
+  <div>
+    <dl>
+      <dt>Web Fundamentals</dt>
+      <dd>
+        <ol>
+          <li>HTML + HTML5</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Bootstrap</li>
+          <li>Tailwind CSS</li>
+          <li>JSON & Web APIs</li>
+        </ol>
+      </dd>
+      <dt>Frontend Framework</dt>
+      <dd>
+        <ol>
+          <li>VueJS</li>
+          <li>ReactJS</li>
+          <li>NextJS</li>
+        </ol>
+      </dd>
+      <dt>Backend & Database</dt>
+      <dd>
+        <ol>
+          <li>PostgreSQL</li>
+          <li>Supabase</li>
+        </ol>
+      </dd>
+    </dl>
+  </div>
   <br><hr>
 
   <h1>Unordered Lists</h1>
   <!--
+    An unordered list is a collection of list items that do not have a specific order or sequence and are marked with 
+    bullets. An HTML unordered list is created by <ul> the tag, where each list item is defined by the <li> tag.
 
+    This list is used for describing a particular service or product, as it does not require any order to be followed.
+
+    To create an unordered list in HTML, we use the <ul> tag and nest <li> tags inside it. 
+    Each <li> element represents one item in the list. 
+    By default, the browser will automatically display disc bullet points for each item. 
+    However, we can change this bullet style using the type attribute on the <ul> element with:
+      - disc: It is the default type of marker.
+      - square: List items will be displayed with a square marker.
+      - circle: It will set the marker to a hollow circle.
+      - none: Displays an unordered list without bullets.
+
+    Styling Unordered HTML Lists
+    Styling an unordered list (<ul>) using CSS allows for customization of the list's appearance, including modifying 
+    bullet points, spacing, and overall design.
+
+    Nested Unordered Lists
+    HTML allows nesting of lists; you can create nested unordered lists to display a list of items inside an item of the 
+    outer list element.
   -->
+  <h2>Specifying Unordered List Marker</h2>
+  <h3>Circle Marker Example</h3>
+  <ul style="list-style-type: circle;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
+  <h3>Disc Marker Example</h3>
+  <ul style="list-style-type: disc;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
+  <h3>Square Marker Example</h3>
+  <ul style="list-style-type: square;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
+  <h3>No Marker Example</h3>
+  <ul style="list-style-type: none;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
+
+  <h2>Styling Unordered HTML Lists</h2>
+  <ul class="unordered_lists_styling">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
   <br><hr>
 
   <h1>Ordered Lists</h1>
   <!--
+    HTML - Ordered Lists
+    An ordered list is defined by <ol> tag where all list items are marked an ordered list.
+    An ordered list is a collection of items that have a specific order or sequence. 
+    HTML ordered list is created by <ol> tag where each list item is defined by the <li> tag.
 
+    This type of ordered list is used to show the list items, where they are marked with an ordered numbered list, 
+    such as the steps of a recipe, the ranking of a leaderboard, or the chronological order of events
+
+    To create an ordered list in HTML, we use the <ol> tag and nest <li> tags inside it. 
+    Each <li> element represents one item in the list. 
+    The numbering starts with 1 and is incremented by one for each successive ordered list element tagged with <li>. 
+    Like an unordered list, it also allows us to change numbering style using the type attribute of the <ol> element.
+
+    The type attribute for the <ol> tag is used to specify the type of marker for the ordered list in HTML. 
+    By default, the type of list numbering is numbers starting with 1, 2, 3, and so on. 
+    You can change the type of numbers by using any of the values given below:
+      - 1: It is the default type of marker.
+      - I: List items will be displayed with roman number marker.
+      - i: List items will be displayed with lowercase roman number marker.
+      - A: It will set the marker to upper case alphabets.
+      - a: It sets the marker to lower case alphabets.
+
+    HTML Ordered List - The start Attribute
+    By default, the numbering starts with 1, but you can change it by using the start attribute with the <ol> tag. 
+    The style attribute defines the starting numbers of the ordered list.
+      <ol type="1" start="4"> - Numerals starts with 4.
+      <ol type="I" start="4"> - Numerals starts with IV.
+      <ol type="i" start="4"> - Numerals starts with iv.
+      <ol type="A" start="4"> - Letters starts with D.
+      <ol type="a" start="4"> - Letters starts with d.
+
+    Styling HTML Ordered List
+    Styling ordered lists with CSS allows customization of the appearance to match the design preferences of a website. 
+    The CSS styles can target both the list itself (<ol>) and the list items (<li>).
+
+    Nested Ordered Lists
+    You can create nested ordered lists to display a list of items inside an item of the outer list element.
+
+    Note: You can also change the type of outer or inner lists, ie, second list to have other marker type. 
+          You can also define the starting number as per your requirement.
   -->
+  <h2>Ordered List default marker types.</h2>
+  <h3>Ordered List with the default type of marker.</h3>
+  <ol type="1">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with upercase roman number marker.</h3>
+  <ol type="I">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with lowercase roman number marker.</h3>
+  <ol type="i">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with upper case alphabets.</h3>
+  <ol type="A">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with lower case alphabets.</h3>
+  <ol type="a">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
   <br>
+
+  <h2>The start Attribute</h2>
+  <h3>Ordered List with the default type of marker with start at 4.</h3>
+  <ol type="1" start="4">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with upercase roman number marker with start at 4.</h3>
+  <ol type="I" start="4">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with lowercase roman number marker with start at 4.</h3>
+  <ol type="i" start="4">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with upper case alphabets with start at 4.</h3>
+  <ol type="A" start="4">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
+  <h3>Ordered List with lower case alphabets with start at 4.</h3>
+  <ol type="a" start="4">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
   <br>
-  <br>
-  <br>
-  <br>
+  
+  <h2>Styling Ordered HTML Lists</h2>
+  <ol class="ordered_lists_styling">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ol>
   <br><hr>
 
   <h1>Definition Lists</h1>
   <!--
+    HTML - Definition Lists
+    A description list is defined by <dl> tag along with the <dt> and <dd> tags. 
+    Where <dt> tag defines the definition term, and <dd> tag defines the corresponding definition.
 
+    HTML definition lists define list items having the structure of terms and their corresponding definitions. 
+    These types of lists are used to define a listing structure where each list item (data term) contains its 
+    corresponding explanation (definition description).
+
+    The <dl> tag supports almost all browsers. It also supports the global attributes and event attributes. 
+    It consists of open and closing tags like <dl></dl>
+
+    The following are the HTML tags used for defining definition lists:
+      <dl>: This tag defines the definition list.
+      <dt>: This tag defines the description term.
+      <dd>: This tag defines the corresponding description for the given definition term.
+    
+    To create a definition list, you need to use the <dl> tag along with the <dt> and <dd> tags.
+    Where:  <dl> is used as a container tag for the definition list.
+            <dt> is used to define the terms that you want to define.
+            <dd> is used to place the definitions for the corresponding terms.
+    
+    Styling Definition Lists
+    You can also customize the default appearance of the definition lists using the CSS properties. 
+    You can apply the CSS styles on all three definition list tags to style them as per your requirement to match with 
+    the website theme.
   -->
+  <h2>Styling Definition Lists</h2>
+  <dl class="definition_list_styling">
+    <dt>English</dt>
+    <dd>
+      English is the first world language. 
+      We can use English language for communication in all areas like politics, media, entertainment, art etc.
+    </dd>
+    <dt>Hindi</dt>
+    <dd>
+      Hindi is an Indo-Aryan language spoken mostly in India. 
+      In India Hindi is spoken as a first language by most of the people.
+    </dd>
+    <dt>Marathi</dt>
+    <dd>
+      Marathi is an Indo-Aryan language spoken by Marathi people of Maharashtra in India. 
+      It is a official Language of Maharashtrian people
+    </dd>
+  </dl>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <br><hr>
 </body>
 </html>
